# SRPG-Studio-extractor

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  settings.gradle
binary_file_struct/: data_struct.md  project_data_struct.md
src/: command.rs  info.rs  lib.rs  main.rs
src/main/java/gwsl/srpgstudio/extractor/: Application.java
src/main/java/gwsl/srpgstudio/extractor/feature/: Analyzer.java  Cryptor.java  Extractor.java  TransalePatcher.java
src/main/java/gwsl/srpgstudio/extractor/struct/: DataStruct.java  FileType.java  Fragment.java  Resource.java  ResourceGroup.java
src/main/java/gwsl/srpgstudio/extractor/util/: ByteBuffToStringUtil.java  FileConverter.java
src/main/java/gwsl/srpgstudio/extractor/work/: Analyzer.java  Cryptor.java  Extractor.java
