[package]
name = "srpg-studio-extractor"
version = "0.1.0"
authors = ["gwsl <godoway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {git = "https://github.com/clap-rs/clap/"}
serde = {version="1.0.104", features = ["derive"]}
serde_json = "1.0.48"